--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,30 @@
 body {
+  font-family: "Inter", system-ui;
   margin: 0;
-  font-family: system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F7FBFE;
+  background: #f7fbfe;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
 }
 
 .wrapper {
@@ -12,4 +33,85 @@ body {
   border-radius: 20px;
   max-width: 1080px;
   margin: 50px auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px;
+  border-bottom: 1px solid #eaeaea;
+}
+.headerLeft {
+  display: flex;
+  align-items: center;
+}
+.headerLeft h3 {
+  text-transform: uppercase;
+  margin: 0;
+}
+.headerLeft p {
+  margin: 0;
+  opacity: 0.5;
+}
+.headerLeft img {
+  margin-right: 15px;
+}
+.headerRight {
+  display: flex;
+}
+.li:first-child li {
+  margin-right: 30px;
+}
+span {
+  margin-left: 10px;
+  margin-right: 30px;
+}
+.content {
+  padding: 40px;
+}
+.content h1 {
+  margin: 0;
+  margin-bottom: 40px;
+}
+.sneakers {
+  display: flex;
+}
+.card {
+  border: 1px solid #f3f3f3;
+  padding: 20px;
+  width: 220px;
+  border-radius: 40px;
+  margin-right: 30px;
+}
+.cardDescription {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cardPrice {
+  display: flex;
+  flex-direction: column;
+}
+.cardPrice span {
+  opacity: 0.5;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 13px;
+}
+.cardPrice b {
+  font-size: 14px;
+}
+.button {
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  border-radius: 8px;
+  box-sizing: border-box;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
+.card h5 {
+  font-weight: 400;
+  font-size: 14px;
 }
