--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,8 @@ li {
   z-index: 1;
 }
 .drawer {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 420px;
   height: 100%;
@@ -56,6 +58,7 @@ li {
   padding: 30px;
 }
 .items {
+  flex: 1;
   overflow: auto;
   margin-bottom: 40px;
 }
