--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,6 +7,10 @@
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
+.plus {
+  cursor: pointer;
+}
+
 .card:hover {
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
   transform: translateY(-5px);
@@ -37,16 +41,6 @@
 
 .cardPrice b {
   font-size: 14px;
-}
-
-.button {
-  background: #ffffff;
-  border: 1px solid #f2f2f2;
-  border-radius: 8px;
-  box-sizing: border-box;
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
 }
 
 .card h5 {
