--- a/src/index.css
+++ b/src/index.css
@@ -150,9 +150,15 @@ h2 {
   background: darken(#9dd558, 5%);
 }
 .removeBtn {
+  position: absolute;
+  right: 0;
   opacity: 0.5;
   cursor: pointer;
   transition: opacity 0.15 ease-in-out;
+  width: 18px;
+  height: 18px;
+  top: 14px;
+  right: 15px;
 }
 .removeBtn:hover {
   opacity: 1;
@@ -205,6 +211,7 @@ span {
   margin: 0;
 }
 .search-block {
+  position: relative;
   display: flex;
   border: 1px solid #f3f3f3;
   border-radius: 10px;
@@ -212,7 +219,7 @@ span {
 }
 .inputSearch {
   width: 200px;
-  border: 0;
+  border: 0px;
   padding: 13px;
   font-size: 16px;
 }
