--- a/src/index.css
+++ b/src/index.css
@@ -61,39 +61,43 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   flex-direction: column;
   flex: wrap;
 }
 .cartEmptyImg {
   width: 120px;
   height: 120px;
+  margin-bottom: 20px;
 }
 .cartEmptyImg:hover {
-  transform: rotate(180deg) translateX(3px);
+  transform: rotate(180deg) translateX(3p);
 }
+
 .cartEmpty p {
   width: 280px;
   line-height: 24px;
   opacity: 0.6;
 }
+.cartEmpty h2 {
+  margin-bottom: 10px;
+}
 .greenButtonTop {
-  position: relative;
-  top: 1px;
-  transform: rotate(180dge);
-  margin-right: 15px;
-  transition: translate 0.15s ease-in-out;
   width: 245px;
-  margin-top: 20px;
   height: 55px;
   background: #9dd558;
-  margin-bottom: 20px;
   border-radius: 18px;
   border: 0;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
   cursor: pointer;
-  transition: background 0.5s ease-in-out;
+}
+.greenButtonTop img {
+  position: relative;
+  top: 1px;
+  margin-right: 15px;
+  transition: transform 0.15s ease-in-out;
 }
 .items {
   flex: 1;
@@ -165,6 +169,7 @@ h2 {
   right: 30px;
   top: 20px;
   transition: transform 0.2s ease-in-out;
+  transform: rotate(180deg);
 }
 .cartTotalBlock .greenButton img:hover {
   transform: translateX(10px);
