--- a/src/index.css
+++ b/src/index.css
@@ -188,12 +188,18 @@ h2 {
   cursor: pointer;
   transition: background 0.5s ease-in-out;
 }
+.greenButton:disabled {
+  background-color: #bebebe !important;
+  cursor: default; 
+  animation: button-loading 0.9s ease-in-out infinite;
+}
 .greenButton:hover {
   background: lighten(#9dd558, 5%);
 }
 .greenButton:active {
   background: darken(#9dd558, 5%);
 }
+
 .closeBtn {
   cursor: pointer;
 }
@@ -273,4 +279,16 @@ span {
 .sneakers {
   display: flex;
   flex-wrap: wrap;
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
 }
